# webui

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Justfile  README.md  deployment-for-push.toml  dev-deps.txt  flake.nix
.cargo/: config.toml
.github/workflows/: check-build-webui.yml  check.yml  push-webui.yml  scheduled-bump-cargo-lock.yml  sync-flake-lock.yml
crates/webui/: .gitignore  Cargo.toml  README.md  Trunk-dev.toml  Trunk.toml  build.rs  index.html  styles.css
crates/webui-proxy/: Cargo.toml  README.md
crates/webui-proxy/src/: lib.rs
crates/webui/src/: app.rs  auth.rs  lib.rs  loader.rs  main.rs
crates/webui/src/components/: advance_modal.rs  component_list_page.rs  component_tree.rs  copy_button.rs  deployment_actions.rs  deployment_config_view.rs  deployment_detail_page.rs  deployment_diff_page.rs  deployment_list_page.rs  execution_actions.rs  execution_detail_page.rs  execution_header.rs  execution_list_page.rs  execution_logs_page.rs  execution_new_page.rs  execution_status.rs  execution_stub_submit_page.rs  execution_submit.rs  execution_submit_page.rs  ffqn_with_links.rs  function_signature.rs  json_tree.rs  mod.rs  not_found.rs  notification.rs
crates/webui/src/components/code/: code_block.rs  syntect_code_block.rs
crates/webui/src/components/debugger/: debugger_view.rs  mod.rs  version_slider.rs
crates/webui/src/components/execution_detail/: cancellation_requested.rs  component_upgrade_finished.rs  component_upgraded.rs  created.rs  finished.rs  http_trace.rs  locked.rs  mod.rs  paused.rs  temporarily_failed.rs  timed_out.rs  tree_component.rs  unlocked.rs  unpaused.rs  utils.rs
crates/webui/src/components/execution_detail/history/: join_next.rs  join_next_too_many.rs  join_next_try.rs  join_set_created.rs  join_set_request.rs  mod.rs  persist.rs  schedule.rs  stub.rs
crates/webui/src/components/trace/: data.rs  execution_trace.rs  trace_view.rs
crates/webui/src/grpc/: component_id.rs  component_type.rs  content_digest.rs  delay_id.rs  deployment_id.rs  execution_id.rs  ffqn.rs  grpc_client.rs  join_set_id.rs  mod.rs  pkg_fqn.rs
crates/webui/src/tree/: icon.rs  mod.rs  tree_data.rs  tree_view.rs
crates/webui/src/util/: color.rs  mod.rs  time.rs  wit_highlighter.rs  wit_type_formatter.rs
crates/webui/styles/: README.md  main.scss  styles.scss
crates/webui/styles/base/: _reset.scss  _variables.scss
crates/webui/styles/components/: _actions.scss  _badges.scss  _buttons.scss  _code-block.scss  _filters.scss  _forms.scss  _header.scss  _modal.scss  _notifications.scss  _slider.scss  _tables.scss  _tree.scss
crates/webui/styles/layout/: _container.scss  _navigation.scss
crates/webui/styles/pages/: _definitions.scss  _deployment.scss  _execution_new.scss  _logs.scss  _timeline.scss  _trace.scss
scripts/: dev-deps.sh  push-webui.sh  sync-wasm-bindgen.sh
