[workspace]
resolver = "2"
members = [
    "obelisk/crates/val-json",
    "crates/webui",
    "crates/webui-proxy",
]

[workspace.package]
version = "0.28.1"
license = "AGPL-3.0-only"
repository = "https://github.com/obeli-sk/webui"
authors = ["Project Developers"]
edition = "2024"
rust-version = "1.91.0"

[workspace.dependencies]
val-json = { package = "obeli-sk-val-json", path = "obelisk/crates/val-json" }

cargo_metadata = "0.23"

# webui
gloo = "0.11.0"
id-arena = "2.2.1"
log = "0.4.29"
semver = "1.0.27"
tonic-web-wasm-client = "0.8.0"
wasm-bindgen = "=0.2.105" # Must be equal to wasm-bindgen-cli in nix. Update Trunk.toml.
wasm-bindgen-futures = "=0.4.55" # Must match https://github.com/rustwasm/wasm-bindgen/blob/$WASM_BINDGEN_VERSION/crates/futures/Cargo.toml
web-sys = { version = "=0.3.82", features = [
    "HtmlInputElement",
    "Performance",
    "Window",
] } # Must match https://github.com/rustwasm/wasm-bindgen/blob/$WASM_BINDGEN_VERSION/crates/web-sys/Cargo.toml
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewprint = "0.5.0"
yewprint-css = "0.4.0"
wstd = "0.6.3"
wit-component = "0.243.0"
wit-parser = "0.243.0"

anyhow = { version = "1.0", features = ["backtrace"] }
assert_matches = "1.5.0"
chrono = { version = "0.4.42", features = ["arbitrary", "serde"] }
derive_more = { version = "2.1.0", features = [
    "debug",
    "deref",
    "display",
    "from_str",
    "into",
] }
futures = { version = "0.3.31", default-features = false }
hashbrown = { version = "0.16.1", features = ["serde"] }
indexmap = { version = "2.12", features = ["serde"] }
prost-wkt-types = "0.7"
prost = "0.14.1"
rand = "=0.8" # yew 0.21 needs getrandom 0.2
serde = "1"
serde_json = "1"
serde_with = "3.16.1"
syntect = { version = "5.3.0", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "regex-fancy",
    "yaml-load",
] }
wasm-logger = "0.2.0"
once_cell = "1.21.3"
tonic = { version = "0.14.2", default-features = false }
tonic-prost = "0.14.2"
ulid = { version = "=1.1.4", features = ["serde"] }
tonic-prost-build = "0.14.2"

# val-json
itertools = "0.14"
thiserror = "2.0"
wasmtime = "40.0.0" # not used
wast = "243.0.0"
insta = { version = "1.45.1", features = ["json"] }

[workspace.lints]
# lower the priority to allow overriding later
clippy.all = { level = "deny", priority = -1 }
# lower the priority to allow overriding later
clippy.dbg_macro = "deny"
# lower the priority to allow overriding later
clippy.pedantic = { level = "deny", priority = -1 }
# lower the priority to allow overriding later
clippy.explicit_deref_methods = "allow" # Lots of false positives.
# lower the priority to allow overriding later
clippy.missing_errors_doc = "allow" # Allow missing docs for now
# lower the priority to allow overriding later
clippy.missing_panics_doc = "allow" # Allow missing docs for now
# lower the priority to allow overriding later
clippy.trivially_copy_pass_by_ref = "allow" # Lots of false positives.
# lower the priority to allow overriding later
clippy.module_name_repetitions = "allow"
# Vec::from_iter is more readable than collect::<Vec<_>>
clippy.from_iter_instead_of_collect = "allow"
# Happy path should be first no matter the condition.
clippy.if_not_else = "allow"
# Keep paths surrounded with quotes
clippy.unnecessary_debug_formatting = "allow"
clippy.too_many_lines = "allow"

[workspace.lints.rust]
unexpected_cfgs = "deny"
unknown_lints = "deny"

[profile.release]
overflow-checks = true
opt-level = "s"
codegen-units = 1
lto = "fat"
strip = "debuginfo"

[profile.dev]
debug = "line-tables-only"
